# nostr-double-ratchet

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVICE_MANAGER_PLAN.md  HANDOFF_REOPEN_DEBUG.md  NOSTR_EVENTS.md  PLAN.md  README.md  eslint.config.js  invite-list-architecture.md  invite-list-design.md  invite-list-migration.md  package.json
docs/: EXPERIMENTAL_INSPIRED_ARCHITECTURE.md
formal/: README.md
rust/: Cargo.toml  README.md
rust/crates/ndr/: Cargo.toml  README.md
rust/crates/ndr-ffi/: Cargo.toml  README.md  build.rs
rust/crates/ndr-ffi/src/: error.rs  lib.rs
rust/crates/ndr-ffi/tests/: app_keys_ffi_compat_test.rs  session_manager_inspection_test.rs  vectors_tests.rs
rust/crates/ndr/src/: config.rs  lib.rs  main.rs  nearby.rs  nostr_client.rs  output.rs  state_sync.rs  storage.rs
rust/crates/ndr/src/commands/: chat.rs  contact.rs  group.rs  identity.rs  invite.rs  link.rs  message.rs  mod.rs  nearby.rs  nip19.rs  owner_claim.rs  public_invite.rs  runtime_support.rs  session_delivery.rs
rust/crates/ndr/src/commands/message/: common.rs  listen.rs  mod.rs  receive.rs  send.rs  tests.rs  types.rs
rust/crates/ndr/tests/: cli_interop_test.rs  e2e_autogen_identity.rs  e2e_chat_join_npub_link.rs  e2e_chat_join_owner_claimed_invite.rs  e2e_crosslang.rs  e2e_group.rs  e2e_group_crosslang.rs  e2e_group_listen.rs  e2e_group_messaging.rs  e2e_invite_publish.rs  e2e_invite_publish_fetch.rs  e2e_link_device.rs  e2e_listen_empty.rs  e2e_multidevice_crosslang.rs  e2e_ndr_invite.rs  e2e_ndr_ndr.rs  e2e_react_typing.rs  e2e_rust_ts_multidevice.rs  e2e_send_public_invite.rs
rust/crates/ndr/tests/common/: mod.rs  ws_relay.rs
rust/crates/nostr-double-ratchet/: Cargo.toml  LICENSE  README.md
rust/crates/nostr-double-ratchet-nostr/: Cargo.toml
rust/crates/nostr-double-ratchet-nostr/src/: app_keys.rs  direct_message_subscriptions.rs  group_codec.rs  lib.rs  message_builders.rs  message_origin.rs  multi_device.rs  nostr_codec.rs  one_to_many.rs
rust/crates/nostr-double-ratchet-nostr/tests/: direct_message_subscriptions_test.rs
rust/crates/nostr-double-ratchet-pairwise-codec/: Cargo.toml
rust/crates/nostr-double-ratchet-pairwise-codec/src/: lib.rs
rust/crates/nostr-double-ratchet-runtime/: Cargo.toml
rust/crates/nostr-double-ratchet-runtime/src/: app_keys_manager.rs  delegate_manager.rs  file_storage.rs  lib.rs  message_queue.rs  nearby.rs  nearby_lan.rs  runtime.rs  storage.rs  user_record.rs
rust/crates/nostr-double-ratchet-runtime/tests/: nearby_wire_test.rs  runtime_group_local_sibling.rs
rust/crates/nostr-double-ratchet/src/: app_keys.rs  app_keys_manager.rs  delegate_manager.rs  device_link.rs  direct_message_subscriptions.rs  error.rs  file_storage.rs  group.rs  group_manager.rs  group_wire.rs  ids.rs  invite.rs  lib.rs  managed_invite.rs  managed_session.rs  message_queue.rs  multi_device.rs  nearby_lan.rs  nostr_codec.rs  one_to_many.rs  owner_roster_proof.rs  pairwise_codec.rs  protocol_backfill.rs  protocol_types.rs  pubsub.rs  roster.rs  roster_editor.rs  runtime.rs  sender_key.rs  session.rs  session_manager.rs  shared_channel.rs  types.rs  user_record.rs  utils.rs  wire.rs
rust/crates/nostr-double-ratchet/src/session_manager/: accept_invite.rs  api.rs  devices.rs  event_processing.rs  group_sender_keys.rs  invite_bootstrap.rs  message_policy.rs  queues.rs  records.rs  sending.rs  session_selection.rs  settings_storage.rs  tests.rs
rust/crates/nostr-double-ratchet/tests/: advanced_test.rs  app_keys_interop.rs  app_keys_test.rs  device_link_test.rs  device_to_device.rs  direct_message_subscriptions_test.rs  group_interop.rs  group_manager_pairwise_adversarial.rs  group_manager_pairwise_basic.rs  group_manager_sender_key_basic.rs  group_manager_test.rs  inner_rumor_id_test.rs  integration_test.rs  interop_test.rs  invalid_rumor_test.rs  invite_listen_test.rs  invite_owner_claim_test.rs  invite_test.rs  message_origin_test.rs  nearby_wire_test.rs  one_to_many_channel_test.rs  one_to_many_interop.rs  out_of_order_test.rs  prerelease_runtime_matrix_test.rs  roster_editor_basic.rs  runtime_self_sync_test.rs  sender_key_test.rs  session_invite_adversarial.rs  session_invite_basic.rs  session_manager_inspection_test.rs  session_manager_multi_device_test.rs  session_manager_sesame_adversarial.rs  session_manager_sesame_basic.rs  session_test.rs  shared_channel_interop.rs  shared_channel_sender_key_test.rs  test_relay.rs
rust/crates/nostr-double-ratchet/tests/support/: mod.rs
rust/crates/test-vectors/: rust-generated.json
rust/crates/v2/core/: Cargo.toml
rust/crates/v2/core/src/: error.rs  ids.rs  invite.rs  lib.rs  session.rs  time.rs
rust/crates/v2/core/tests/: device_to_device.rs  session_invite.rs
rust/scripts/: publish.sh
rust/src/: file_storage.rs  invite.rs  lib.rs  pubsub.rs  session.rs  session_manager.rs  user_record.rs  utils.rs
rust/tests/: advanced_test.rs  interop_test.rs  invite_test.rs  out_of_order_test.rs
src/: Channel.ts  DeviceManager.ts  Invite.ts  InviteLink.ts  InviteList.ts  Session.ts  SessionManager.ts  StorageAdapter.ts  UserRecord.ts  index.ts  inviteUtils.ts  types.ts  utils.ts
test-vectors/: rust-generated.json  rust-group-roster-fact-vectors.json  rust-group-vectors.json  rust-one-to-many-vectors.json  rust-sender-key-repair-vectors.json  rust-shared-channel-vectors.json  ts-generated.json  ts-group-roster-fact-vectors.json  ts-group-vectors.json  ts-one-to-many-vectors.json  ts-sender-key-repair-vectors.json  ts-shared-channel-vectors.json
tests/: AggressiveEdgeCases.controlled.test.ts  BugReport.SelfMessage.test.ts  Channel.integration.test.ts  Channel.test.ts  ControlledMockRelay.test.ts  DelegateDevice.test.ts  DelegateDeviceMessaging.test.ts  DelegateDeviceRefresh.controlled.test.ts  DelegateDeviceRefresh.test.ts  DeviceManager.delegate.test.ts  DeviceManager.integration.test.ts  DeviceManager.main.test.ts  DeviceManager.test.ts  EdgeCases.controlled.test.ts  EdgeCases.test.ts  Invite.link.test.ts  Invite.ndk.integration.test.ts  Invite.test.ts  InviteLink.test.ts  InviteList.migration.test.ts  (+15 more)
(+207 files in other folders)
