[workspace]
resolver = "2"
members = [
    "crates/nostr-double-ratchet",
    "crates/ndr",
    "crates/ndr-ffi",
]

[workspace.package]
version = "0.0.49"
edition = "2021"
authors = ["Martti Malmi"]
license = "MIT"
repository = "https://files.iris.to/#/npub1xndmdgymsf4a34rzr7346vp8qcptxf75pjqweh8naa8rklgxpfqqmfjtce/nostr-double-ratchet"

[workspace.dependencies]
nostr-double-ratchet = { version = "0.0.49", path = "crates/nostr-double-ratchet" }
nostr = { version = "0.37", default-features = false, features = ["std", "nip44"] }
nostr-sdk = "0.37"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hkdf = "0.12"
sha2 = "0.10"
hex = { version = "0.4", features = ["serde"] }
thiserror = "2"
base64 = "0.22"
urlencoding = "2.1"
rand = "0.8"
crossbeam-channel = "0.5"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "5"
anyhow = "1"
