[workspace]
resolver = "2"
members = [
    "crates/nostr-double-ratchet",
    "crates/nostr-double-ratchet-nostr",
    "crates/nostr-double-ratchet-pairwise-codec",
    "crates/nostr-double-ratchet-runtime",
]

[workspace.package]
version = "0.0.137"
edition = "2021"
authors = ["Martti Malmi"]
license = "MIT"
repository = "https://files.iris.to/#/npub1xdhnr9mrv47kkrn95k6cwecearydeh8e895990n3acntwvmgk2dsdeeycm/nostr-double-ratchet"

[workspace.dependencies]
nostr-double-ratchet = { version = "0.0.137", path = "crates/nostr-double-ratchet" }
nostr-double-ratchet-nostr = { version = "0.0.137", path = "crates/nostr-double-ratchet-nostr" }
nostr-double-ratchet-pairwise-codec = { version = "0.0.137", path = "crates/nostr-double-ratchet-pairwise-codec" }
nostr-double-ratchet-runtime = { version = "0.0.137", path = "crates/nostr-double-ratchet-runtime" }
nostr = { version = "0.44.2", default-features = false, features = ["std", "nip44"] }
nostr-sdk = "0.44.1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hkdf = "0.12"
sha2 = "0.10"
hex = { version = "0.4", features = ["serde"] }
thiserror = "2"
base64 = "0.22"
urlencoding = "2.1"
rand = "0.8"
crossbeam-channel = "0.5"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "5"
anyhow = "1"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
mdns-sd = { version = "0.19.1", default-features = false }
