[package]
name = "ndr"
description = "CLI for encrypted Nostr messaging using double ratchet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nostr-double-ratchet.workspace = true
nostr.workspace = true
nostr-sdk.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hex.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
axum = { version = "0.7", features = ["ws"] }
futures = "0.3"
tokio-tungstenite = "0.24"
