[package]
name = "nostr-double-ratchet"
description = "Nostr double ratchet library for Rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
nostr.workspace = true
serde.workspace = true
serde_json.workspace = true
hkdf.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
base64.workspace = true
rand.workspace = true

[dev-dependencies]
nostr-double-ratchet-nostr.workspace = true
nostr-double-ratchet-pairwise-codec.workspace = true
nostr-double-ratchet-runtime = { workspace = true, features = ["nearby"] }
tokio.workspace = true
crossbeam-channel.workspace = true
urlencoding.workspace = true
tempfile = "3"
tokio-tungstenite = "0.24"
futures-util = "0.3"
chrono = "0.4"
