[package]
name = "ndr-v2-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure v2 core primitives for nostr-double-ratchet"

[dependencies]
base64.workspace = true
hex.workspace = true
hkdf.workspace = true
nostr.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
